--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -1,15 +1,20 @@
 .wrapper {
   display: flex;
 }
+.wrapper {
+  display: flex;
+}
+
 .side-bar {
   background-color: #253141;
   width: 300px;
   height: 100vh;
 }
 
-.header-side-bar {
+.side-bar-header {
   height: 100px;
   padding: 0 20px;
+  background-color: #253141;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -26,7 +31,7 @@
 }
 
 .create-room a {
-  border: solid 1px lightblue;
+  border: 1px solid lightblue;
   padding: 14px;
   color: deepskyblue;
   text-decoration: none;
