--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,6 +1,6 @@
-<div class="side-header">
+<div class="side-bar-header">
   <div class="header-name">
-    <a href="#">imai</a>
+    <a href="#">Tom</a>
   </div>
   <div class="create-room">
     <a href="#">チャットを作成する</a>
